# UnAi-Governance-Kernal

./: LICENSE  README.md
docs/: PDF-REFERENCES.md  getting-started.md
examples/unai/: basic_assistant.py
src/python/: pyproject.toml  requirements.txt  setup.py
src/python/governance_kernel/: __init__.py
src/python/governance_kernel/core/: __init__.py  invariants.py  kernel.py  state_encoder.py  verifier.py
src/python/governance_kernel/handlers/: __init__.py  registry.py
src/python/governance_kernel/utils/: __init__.py  config.py  logger.py
tests/stress/: logistics_scenario.py
