[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-kernel"
version = "1.0.0"
description = "Universal framework for preventing authority accumulation in AI and complex systems"
readme = "../../README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mark Carter", email = "governance@governance-kernel.org"}
]
keywords = ["governance", "AI", "authority", "verification", "safety"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/governance-kernel/governance-kernel"
Documentation = "https://github.com/governance-kernel/governance-kernel/docs"
Repository = "https://github.com/governance-kernel/governance-kernel"
"Bug Tracker" = "https://github.com/governance-kernel/governance-kernel/issues"

[tool.pytest.ini_options]
testpaths = ["../../tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=governance_kernel --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
